# LearnZeroMQ

./: README.md
01_Getting_the_Message_Out/: Readme.md  client.c  server.c
02_Parallel_Processing_Model/: Readme.md  build.sh  sink.c  ventilator.c  worker.c
03_Handle_Multiple_Sockets/: Readme.md  mspoller.c  msreader.c
04_Request_Distribution_Shared_Queue/: Readme.md  rrbroker.c  rrclient.c
05_Request_Distribution_Shared_Queue_With_Built_in_Proxy/: Readme.md  msgqueue.c  rrworker.c
06_Multithreaded_Hello_World/: Readme.md  client.c  mtserver.c
07_Signaling_Between_Threads_PAIR_Sockets/: Readme.md  mtrelay.c
08_Pub-Sub_Synchronization_Node-Coordination/: Readme.md  syncpub.c  syncsub.c
09_Pub-Sub_Message_Envelope_with_Separate_Key/: Readme.md  psenvpub.c  psenvsub.c
10_Identity_Check/: Readme.md  identity.c
11_Load_Balancing_Broker_Using_High-level_API_C/: Readme.md  lbbroker2-zmq_poll.c  lbbroker3-zloop.c
12_Pub-Sub_Forwarder_Proxy/: Readme.md  server.c  wuproxy.c
13_Pub-Sub_Network_with_a_Proxy/: Readme.md  client.c  server.c  wuproxy.c
14_Send_OpenCV_Mat/: CMakeLists.txt  publisher.cpp  subscriber.cpp
15_Send_Image_To_External_Network/: CMakeLists.txt  Readme.md  local_computer.cpp  local_computer_receiver.cpp  server.cpp  zhelpers.hpp
16_Asynchronous_Client-Server_in_C/: Readme.md  asyncsrv.c
17_Advanced_Pub-Sub_Patterns/Espresso_Pattern_Pub-Sub_Tracing/: Readme.md  espresso.c  espresso.out
17_Advanced_Pub-Sub_Patterns/Suicidal_Snail_Pattern/: Readme.md  suisnail.c  suisnail.out
